testing/tests/ui/is_defined.stderr
error: `is defined` operator can only be used on variables, not on their fields
 --> <source attribute>:1:7
  |
       1 | {% if x.y is defined %}{% endif %}
         |       ^ close to this token
         |
 --> tests/ui/is_defined.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `is defined` operator can only be used on variables
 --> <source attribute>:1:7
  |
       1 | {% if true is defined %}{% endif %}
         |       ^ close to this token
         |
  --> tests/ui/is_defined.rs:10:10
   |
10 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `defined` or `not defined` after `is`
 --> <source attribute>:1:7
  |
       1 | {% if true is %}{% endif %}
         |       ^ close to this token
         |
  --> tests/ui/is_defined.rs:17:10
   |
17 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `defined` or `not defined` after `is`
 --> <source attribute>:1:7
  |
       1 | {% if x is %}{% endif %}
         |       ^ close to this token
         |
  --> tests/ui/is_defined.rs:24:10
   |
24 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `defined` or `not defined` after `is`
 --> <source attribute>:1:7
  |
       1 | {% if x is blue %}{% endif %}
         |       ^ close to this token
         |
  --> tests/ui/is_defined.rs:31:10
   |
31 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `defined` or `not defined` after `is`
 --> <source attribute>:1:7
  |
       1 | {% if x is blue.red %}{% endif %}
         |       ^ close to this token
         |
  --> tests/ui/is_defined.rs:38:10
   |
38 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
